# bazel_test

./: .gitignore  README.md  WORKSPACE.bazel  bazel-bazel_test  bazel-bin  bazel-out  bazel-testlogs
projects/calculator/: BUILD.bazel  calculator.py  calculator_test.py
projects/my-python-app/: main.py
